--- a/src/testpattern/Makefile.am
+++ b/src/testpattern/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.23 2005/11/21 11:16:23 rleigh Exp $
+## $Id: Makefile.am,v 1.24 2006/05/12 01:10:19 rlk Exp $
 ## Copyright (C) 2000 Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -26,14 +26,14 @@ include $(top_srcdir)/scripts/global.mk
 
 pkgdatadir = $(datadir)/$(PACKAGE)/samples
 
-TESTS = run-testpattern run-testpattern-1
+TESTS = run-testpattern run-testpattern-1 run-testpattern-2
 
 
 ## Programs
 
 if BUILD_TESTPATTERN
 bin_PROGRAMS = testpattern
-noinst_PROGRAMS = printers
+noinst_PROGRAMS = printers printer_options
 endif
 
 AM_LFLAGS = -i
@@ -46,6 +46,7 @@ testpatternl.o: testpatterny.o
 testpattern.o: testpatterny.o
 
 printers_LDADD = $(GUTENPRINT_LIBS)
+printer_options_LDADD = $(GUTENPRINT_LIBS)
 
 
 ## Data
