cups-genppdupdate.in: Make sure egrep always has input files, otherwise it will freeze waiting on stdin.

--- a/src/cups/cups-genppdupdate.in
+++ b/src/cups/cups-genppdupdate.in
@@ -1,5 +1,5 @@
 #! @PERL@ -w
-# $Id: cups-genppdupdate.in,v 1.24 2006/03/29 02:27:15 rlk Exp $
+# $Id: cups-genppdupdate.in,v 1.25 2006/05/22 20:25:51 rleigh Exp $
 # Update CUPS PPDs for Gutenprint queues.
 # Copyright (C) 2002-2003 Roger Leigh (rleigh@debian.org)
 #
@@ -131,13 +131,15 @@ if (@ppdglob) {
 	chomp;
 	push @ppd_files,  $_;
     }
-    open PPDFILES, '-|', 'egrep', '-i', '-L', 'Foomatic', @ppd_files or die "can't grep $ppdlist: $!";
-    @ppd_files = ();
-    while (<PPDFILES>) {
-	chomp;
-	push @ppd_files,  $_;
+    if (@ppd_files) {
+	open PPDFILES, '-|', 'egrep', '-i', '-L', 'Foomatic', @ppd_files or die "can't grep $ppdlist: $!";
+	@ppd_files = ();
+	while (<PPDFILES>) {
+	    chomp;
+	    push @ppd_files,  $_;
+	}
+	close PPDFILES or ($! == 0) or die "can't close grep pipe: $!";
     }
-    close PPDFILES or ($! == 0) or die "can't close grep pipe: $!";
 }
 
 
