--- a/src/gimp2/Makefile.am
+++ b/src/gimp2/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.6 2005/11/21 11:16:23 rleigh Exp $
+## $Id: Makefile.am,v 1.7 2006/07/04 02:57:58 rlk Exp $
 ## Copyright (C) 2000 Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -24,25 +24,36 @@ include $(top_srcdir)/scripts/global.mk
 
 ## Variables
 
-LOCAL_CPPFLAGS = $(GUTENPRINT_CFLAGS) $(GIMP2_CFLAGS)
 
 
 ## Programs
 
 if BUILD_GIMP2
+if BUILD_GIMP2_AS_GUTENPRINT
+gimp2_plug_in_PROGRAMS = gutenprint
+else
 gimp2_plug_in_PROGRAMS = print
 endif
+endif
 
-print_SOURCES = \
+LOCAL_CPPFLAGS = $(GUTENPRINT_CFLAGS) $(GIMP2_CFLAGS)
+
+COMMON_PRINT_SOURCES = \
 	print-image-gimp.c \
 	print-intl.h \
 	print.c \
 	print_gimp.h
 
+
+print_SOURCES = $(COMMON_PRINT_SOURCES) print-print.c
 print_LDADD = $(GIMP2_LIBS) $(GUTENPRINTUI2_LIBS)
 print_DEPENDENCIES = $(GUTENPRINTUI2_LIBS) $(GUTENPRINT_LIBS)
 
+gutenprint_SOURCES = $(COMMON_PRINT_SOURCES) print-gutenprint.c
+gutenprint_LDADD = $(print_LDADD)
+gutenprint_DEPENDENCIES = $(print_DEPENDENCIES)
 
 ## Clean
 
 MAINTAINERCLEANFILES = Makefile.in
+CLEANFILES = print gutenprint
