Add CUPS 1.2 driver interface.
Clean up resolution option names to stick to "NNNdpi" or "NNNxNNNdpi"
whenever possible.

configure.ac:
    - Only build CUPS PPDs by default if we are using CUPS 1.1.x.

src/cups/Makefile.am:
    - Drop canon and epson backends.
    - Add gutenprint.M.m driver interface.

src/cups/genppd.c:
    - When CUPS_DRIVER_INTERFACE is defined, build as a CUPS driver
      interface instead of a standalone PPD generator.
    - Add cat_ppd(), generate_ppd(), and list_ppds() functions.
    - Factor out the PPD creation code in write_ppd(), which is now
      part of generate_ppd(), and then call write_ppd() from either
      cat_ppd() or generate_ppd(), as needed.

src/main/*:
    - Fix resolution option names - the PPD spec requires the suffix
      "dpi" and if the X and Y resolutions are the same only a single
      number should be provided.  I didn't mess with the Epson driver
      suffixes (sw, mw, etc.) since they select the weave mode, but
      most of the Epson PPD files will not pass a cupstestppd test and
      probably won't work with Windows apps (you'll be stuck with the
      default resolution in the PPD file...)

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.153 2006/09/18 02:31:57 rlk Exp $
+dnl $Id: configure.ac,v 1.154 2006/09/18 23:02:57 easysw Exp $
 dnl Copyright (C) 2001-2004 Roger Leigh
 dnl 
 dnl This program is free software; you can redistribute it and/or modify
@@ -49,7 +49,7 @@ pushdef([GUTENPRINT_VERSION], GUTENPRINT_MAJOR_VERSION.GUTENPRINT_MINOR_VERSION.
 
 AC_INIT(GUTENPRINT_NAME, GUTENPRINT_VERSION, [gimp-print-devel@lists.sourceforge.net])
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.153 $)
+AC_REVISION($Revision: 1.154 $)
 AC_CONFIG_SRCDIR(src/main/print-vars.c)
 AC_CONFIG_AUX_DIR(scripts)
 STP_INIT
@@ -206,8 +206,16 @@ STP_ARG_WITH_DETAILED(
      cups_prefix="${prefix}"
   ])
 
-BUILD_CUPS_PPDS="${BUILD_CUPS}"
-BUILD_TRANSLATED_CUPS_PPDS="${BUILD_CUPS}"
+case `$CUPS_CONFIG --version` in
+    1.1*)
+	BUILD_CUPS_PPDS="${BUILD_CUPS}"
+	BUILD_TRANSLATED_CUPS_PPDS="${BUILD_CUPS}"
+	;;
+    *)
+	BUILD_CUPS_PPDS="no"
+	BUILD_TRANSLATED_CUPS_PPDS="no"
+	;;
+esac
 
 STP_ARG_ENABLE([cups-ppds],
                [build CUPS PPD files],
