Backport mainline 5.1.0 (release candidate) to 5.0 branch.  Omitted changes to Postscript driver, and kept the name of the Olympus driver the same (did not rename it to dyesub).

--- a/src/foomatic/foomatic-generator.in
+++ b/src/foomatic/foomatic-generator.in
@@ -112,8 +112,8 @@ if ($foomatic3) {
     print STDERR "Loading margins from ./printer_margins $simplified_subopt...";
     $code = join('', <PIPE>);
     #print $code;
-    close PIPE or die "Cannot run printer_margins: $!\n";
-    eval $code or die "Cannot run printer_margins: $!\n";
+    close PIPE or die "Cannot complete printer_margins: $!\n";
+    eval $code or die "Cannot evaluate printer_margins: $!\n";
     print STDERR "done.\n";
 }
 
