Speed up foomatic data generation by printing each complete perl expression on one line in printer_margins and eval'ing each line individually.
This was somewhat of a surprise; I expected that slurping the whole thing
in and doing one big eval would be faster (fewer calls to eval).  In fact,
trying that with printer_options slightly increased user CPU time and
significantly increased system CPU time.  Changing printer_margins to
allow individual eval's all but eliminated system CPU time and slightly
reduced user CPU time, with a net 25% improvement in data generation.

--- a/src/foomatic/foomatic-generator.in
+++ b/src/foomatic/foomatic-generator.in
@@ -110,10 +110,12 @@ print STDERR "done.\n";
 if ($foomatic3) {
     open PIPE, "./printer_margins $simplified_subopt|" or die "Cannot run printer_margins: $!\n";
     print STDERR "Loading margins from ./printer_margins $simplified_subopt...";
-    $code = join('', <PIPE>);
-    #print $code;
+    while(<PIPE>) {
+	#print $_;
+	next if m!^#!;
+	eval $_;
+    }
     close PIPE or die "Cannot run printer_margins: $!\n";
-    eval $code or die "Cannot run printer_margins: $!\n";
     print STDERR "done.\n";
 }
 
